--- a/styles/partials/_home.scss
+++ b/styles/partials/_home.scss
@@ -35,8 +35,8 @@
     position: relative;
     bottom: 120px;
     right: -720px;
-    width: 50%;
-    height: 500px;
+    width: 43.7%;
+    height: 478px;
 }
 
 .section1 {
